# AILearningOS

./: .env.example  .gitignore  LEARNING_NOTES.md  NEXT_STEPS.md  PLAN.md  README.md  docker-compose.yml  test.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_document_content_hash.py  0003_topic_lesson_cache.py
backend/app/: main.py
backend/app/api/v1/: chat.py  knowledge.py  plans.py  progress.py  quizzes.py  router.py
backend/app/core/: config.py  database.py  lifespan.py
backend/app/eval/: README.md  __init__.py  goldset.toml  metrics.py  reingest.py  resolve.py  retrievers.py  run_eval.py
backend/app/eval/results/: baseline.json  hyde.json  late_chunk.json  multilingual.json  parent_doc.json  semantic_chunk.json  smart_chunk.json
backend/app/models/: __init__.py  chat.py  document.py  plan.py  progress.py  quiz.py
backend/app/schemas/: chat.py  document.py  plan.py  progress.py  quiz.py
backend/app/services/: grader.py  tutor.py
backend/app/services/agents/: llm_factory.py  mentor_agent.py  planner_agent.py
backend/app/services/ingestion/: chunker.py  markdown_loader.py  pdf_loader.py
backend/app/services/rag/: embedder.py  hyde.py  qdrant_store.py  reranker.py  retriever.py
backend/tests/: test_chunker.py  test_eval_metrics.py  test_grader.py  test_hyde.py  test_parent_retrieval.py  test_reranker.py  test_sparse.py
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: api.ts  streaming.ts  types.ts  utils.ts
(+9 files in other folders)
