[project]
name = "ai-learning-os-backend"
version = "0.1.0"
description = "AI Learning OS — backend API"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # LangChain + LangGraph
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    # Embeddings
    "sentence-transformers>=3.3.0",
    # Document parsing
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.0",
    # Utilities
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    "rank-bm25>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
